--- a/DIUTF/app/src/main/res/layout/activity_favorites.xml
+++ b/DIUTF/app/src/main/res/layout/activity_favorites.xml
@@ -74,7 +74,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Playas"
+                android:text="Tus favoritos"
                 android:textAlignment="center"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -102,7 +102,7 @@
                     android:layout_toStartOf="@+id/editText"
                     android:layout_weight="1"
                     android:gravity="left|center_vertical"
-                    android:text="Jesé"
+                    android:text="Cynthia"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -136,7 +136,7 @@
                     android:layout_weight="0.5"
                     android:gravity="left|center_vertical"
                     android:paddingTop="5dp"
-                    android:text="Playa de Cabron, Ingenio"
+                    android:text="Playa del Inglés, Maspalomas"
                     android:textStyle="bold" />
 
                 <TextView
@@ -147,7 +147,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_weight="1"
                     android:paddingTop="5dp"
-                    android:text="28/09/2017"
+                    android:text="29/11/2017"
                     android:textAlignment="textEnd"
                     android:textStyle="bold" />
 
@@ -177,7 +177,7 @@
                     android:layout_toStartOf="@+id/editText"
                     android:layout_weight="1"
                     android:gravity="left|center_vertical"
-                    android:text="Sarah"
+                    android:text="Crisamer"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -211,7 +211,7 @@
                     android:layout_weight="0.5"
                     android:gravity="left|center_vertical"
                     android:paddingTop="5dp"
-                    android:text="Playa de las burras, San Agustín"
+                    android:text="Playa de las Canteras, Las Palmas"
                     android:textStyle="bold" />
 
                 <TextView
@@ -222,7 +222,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_weight="1"
                     android:paddingTop="5dp"
-                    android:text="21/04/2017"
+                    android:text="14/11/2017"
                     android:textAlignment="textEnd"
                     android:textStyle="bold" />
 
