--- a/DIUTF/app/src/main/res/layout/activity_login.xml
+++ b/DIUTF/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,8 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="144dp"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/logo" />
 
         <TextView
             android:id="@+id/nombreUsuario"
