--- a/DIUTF/app/src/main/res/values/colors.xml
+++ b/DIUTF/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4b5cbe</color>
+    <color name="colorPrimaryDark">#203f93</color>
+    <color name="colorAccent">#ff122d</color>
 </resources>
