--- a/DIUTF/app/src/main/res/layout/activity_search.xml
+++ b/DIUTF/app/src/main/res/layout/activity_search.xml
@@ -166,7 +166,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/homeButton2"
+                android:id="@+id/home"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -174,7 +174,7 @@
                 app:srcCompat="@drawable/home" />
 
             <ImageButton
-                android:id="@+id/search2"
+                android:id="@+id/search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -182,7 +182,7 @@
                 app:srcCompat="@drawable/search" />
 
             <ImageButton
-                android:id="@+id/perfil2"
+                android:id="@+id/perfil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
