--- a/DIUTF/app/src/main/res/layout/activity_login.xml
+++ b/DIUTF/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <Button
-            android:id="@+id/signUp"
+            android:id="@+id/register"
             android:layout_width="wrap_content"
             android:layout_height="37dp"
             android:layout_weight="1"
