--- a/DIUTF/app/src/main/res/layout/activity_profile.xml
+++ b/DIUTF/app/src/main/res/layout/activity_profile.xml
@@ -71,7 +71,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
@@ -95,7 +95,7 @@
                 android:padding="3dp">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imageView1"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_weight="0"
@@ -108,7 +108,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/textView2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -121,7 +121,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/textView3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -134,7 +134,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView8"
+                        android:id="@+id/textView4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -158,7 +158,7 @@
                 android:padding="3dp">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_weight="0"
@@ -171,7 +171,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/textView5"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -184,7 +184,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/textView6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -197,7 +197,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/textView7"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -229,7 +229,7 @@
                 android:padding="3dp">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imageView3"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_weight="0"
@@ -242,7 +242,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/textView8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -255,7 +255,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/textView9"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -268,7 +268,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView8"
+                        android:id="@+id/textView10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -305,7 +305,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/textView11"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -318,7 +318,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/textView12"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -331,7 +331,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/textView13"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/imageView3"
@@ -357,7 +357,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/homeButton2"
+                android:id="@+id/home"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -365,7 +365,7 @@
                 app:srcCompat="@drawable/home" />
 
             <ImageButton
-                android:id="@+id/search2"
+                android:id="@+id/search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -373,7 +373,7 @@
                 app:srcCompat="@drawable/search" />
 
             <ImageButton
-                android:id="@+id/perfil2"
+                android:id="@+id/perfil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
