--- a/DIUTF/app/src/main/res/layout/activity_start.xml
+++ b/DIUTF/app/src/main/res/layout/activity_start.xml
@@ -238,7 +238,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/homeButton2"
+                android:id="@+id/home"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -254,7 +254,7 @@
                 app:srcCompat="@drawable/search" />
 
             <ImageButton
-                android:id="@+id/perfil2"
+                android:id="@+id/perfil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
