--- a/DIUTF/app/src/main/res/layout/activity_start.xml
+++ b/DIUTF/app/src/main/res/layout/activity_start.xml
@@ -83,157 +83,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.95"
+            android:layout_weight="0.5"
             android:orientation="vertical"
             android:padding="3dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/user4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/editText"
-                    android:layout_marginTop="20dp"
-                    android:layout_toStartOf="@+id/editText"
-                    android:layout_weight="1"
-                    android:gravity="left|center_vertical"
-                    android:text="Jesé"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/playagc" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView3"
-                    android:layout_centerHorizontal="true"
-                    android:layout_weight="0.5"
-                    android:gravity="left|center_vertical"
-                    android:paddingTop="5dp"
-                    android:text="Playa de Cabron, Ingenio"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView3"
-                    android:layout_centerHorizontal="true"
-                    android:layout_weight="1"
-                    android:paddingTop="5dp"
-                    android:text="28/09/2017"
-                    android:textAlignment="textEnd"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.95"
-            android:orientation="vertical"
-            android:padding="3dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/user4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/editText"
-                    android:layout_marginTop="20dp"
-                    android:layout_toStartOf="@+id/editText"
-                    android:layout_weight="1"
-                    android:gravity="left|center_vertical"
-                    android:text="Sarah"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
+            <ListView
+                android:id="@+id/listBeach"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="25"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/playagc" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView3"
-                    android:layout_centerHorizontal="true"
-                    android:layout_weight="0.5"
-                    android:gravity="left|center_vertical"
-                    android:paddingTop="5dp"
-                    android:text="Playa de las burras, San Agustín"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView3"
-                    android:layout_centerHorizontal="true"
-                    android:layout_weight="1"
-                    android:paddingTop="5dp"
-                    android:text="21/04/2017"
-                    android:textAlignment="textEnd"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
+                android:layout_weight="0" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.15"
+            android:layout_weight="1.3"
             android:gravity="bottom|left"
             android:orientation="horizontal">
 
