--- a/DIUTF/app/src/main/res/layout/activity_search.xml
+++ b/DIUTF/app/src/main/res/layout/activity_search.xml
@@ -80,7 +80,6 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Las Palmas de Gran Canaria |"
                 android:textAlignment="center" />
 
             <LinearLayout
@@ -90,70 +89,10 @@
                 android:orientation="vertical"
                 android:padding="3dp">
 
-                <LinearLayout
+                <ListView
+                    android:id="@+id/beachSearch"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/user4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/editText"
-                        android:layout_marginTop="20dp"
-                        android:layout_toStartOf="@+id/editText"
-                        android:layout_weight="1"
-                        android:text="Benjamin"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="25"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/playagc" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/imageView3"
-                        android:layout_centerHorizontal="true"
-                        android:layout_weight="0.5"
-                        android:paddingTop="5dp"
-                        android:text="Playa Las Alcaravaneras,Gran Canaria "
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/imageView3"
-                        android:layout_centerHorizontal="true"
-                        android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:text="21/11/2017"
-                        android:textAlignment="textEnd"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
+                    android:layout_height="match_parent" />
             </LinearLayout>
 
         </LinearLayout>
