--- a/DIUTF/app/src/main/res/layout/beach.xml
+++ b/DIUTF/app/src/main/res/layout/beach.xml
@@ -20,6 +20,7 @@
             android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:text="Benjamin"
+            android:textColor="#000000"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -50,6 +51,7 @@
             android:layout_weight="0.5"
             android:paddingTop="5dp"
             android:text="Playa Las Alcaravaneras,Gran Canaria "
+            android:textColor="#000000"
             android:textStyle="bold" />
 
         <TextView
@@ -60,6 +62,7 @@
             android:paddingTop="5dp"
             android:text="21/11/2017"
             android:textAlignment="textEnd"
+            android:textColor="#000000"
             android:textStyle="bold" />
 
     </LinearLayout>
