--- a/DIUTF/app/src/main/res/layout/activity_camera.xml
+++ b/DIUTF/app/src/main/res/layout/activity_camera.xml
@@ -32,6 +32,7 @@
             android:id="@+id/acceptButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:text="Aceptar"
             tools:layout_editor_absoluteX="148dp"
